# guirpc

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yaml  .travis.yml  README.md  docker-compose.yaml  docker-compose.yml  notes.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
docker/: .dockerignore  Dockerfile  docker-compose.yml  start_consumer.sh
docs/: requirements.txt
docs/source/: conf.py  examples.rst  index.rst  quickstart.rst
docs/source/_static/: custom.css
docs/source/_templates/: navbar-2.html  navbar.html
guilogacore_rpc/: __init__.py  manager.py
guilogacore_rpc/amqp/: __init__.py  consumer.py  consumers.py  decorators.py  producer.py  providers.py  serializers.py  utils.py
guilogacore_rpc/amqp/domain/: contracts.py  encoding.py  exceptions.py  mixins.py  objects.py
guilogacore_rpc/commands/: __init__.py  config_defaults.yaml  init.py  run.py  runconsumer.py
guilogacore_rpc/fixtures/consumer/: faas.py  server.py
guilogacore_rpc/fixtures/producer/: client.py
guilogacore_rpc/resources/: logging.yaml
guirpc/: manager.py
guirpc/amqp/: consumer.py  decorators.py  producer.py  providers.py  serializers.py  utils.py
guirpc/amqp/domain/: __init__.py  contracts.py  encoding.py  exceptions.py  mixins.py  objects.py
guirpc/commands/: __init__.py  init.py  run.py
guirpc/fixtures/consumer/: server.py
guirpc/fixtures/producer/: client.py
guirpc/resources/: defaults.yaml  logging.yaml
tests/: conftest.py  test_fixtures.py  test_utils.py
tests/integration/: tests.py
tests/unit/: tests.py
