[metadata]
name = guilogacore-rpc
version = 0.0.1
license = MIT
author = Guillem López Garcia
author_email = wyl.loga@gmail.com
description = RPC core package to build a FaaS-like application service
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/guiloga/guilogacore-rpc
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = False
python_requires = >=3.6
install_requires =
    pika==1.1.0
    click==7.1.2
    PyYAML==5.3.1

[options.packages.find]
include=guilogacore_rpc*
exclude=tests

[options.package_data]
guilogacore_rpc = commands/config_defaults.yml

[options.extras_require]
dev =

[options.entry_points]
console_scripts =
    gui_rpc = guilogacore_rpc.manager:main
